refactored readFile() and getFileContents() method.